# MindVault

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_migration_issue.yml  documentation_issue.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml
.husky/: pre-commit
core/: Cargo.toml  tauri.conf.json
core/src/: auth.rs  chat.rs  decay.rs  ipc_types.rs  lib.rs  main.rs  onboarding.rs  priority.rs  privacy.rs  redacted.rs
core/src/llm/: assembler.rs  client.rs  mod.rs
core/src/memory_agent/: changeset.rs  mod.rs  parser.rs  persistence.rs  prompt.rs  similarity.rs  trigger.rs
core/tests/: migration_integrity.rs  onboarding_default_vaults.rs  ui_metadata_migration.rs
db/: .gitkeep
db/migrations/: 0001_schema_v1.sql  0002_decay_urp_fields.sql  0002_priority_urp_fields.sql  0003_onboarding_default_vaults.sql  README.md
scripts/: preflight.mjs  test-frontend.ts
src/: App.tsx
ui/: App.css  App.tsx  DebugPanel.tsx  ipc.testing.ts  ipc.ts  ipcMockState.ts  main.tsx
ui/components/: ChartBlock.tsx  ChatPanel.tsx  DecayBar.tsx  DecayDashboard.tsx  DiffPanel.tsx  ErrorBoundary.tsx  LatexBlock.tsx  LlmSettings.tsx  MermaidBlock.tsx  NodeEditor.tsx  NodeEditorDetail.tsx  NodeEditorExpanded.tsx  NodeLinkAutocomplete.tsx  NodeList.tsx  OnboardingShell.tsx  PlantUmlBlock.tsx  PlotlyRenderer.tsx  PriorityDashboard.tsx  PrivacyBadge.tsx  ScopeIndicator.tsx  (+2 more)
(+27 files in other folders)
